[package]
name = "mstr-substreams-v4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "masterfile_events"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.6"
substreams-ethereum = "0.9.1"
prost = "0.11.6"
ethabi = "18.0.0"
num-bigint = "0.4.3"
inner = "0.1.1"
tiny-keccak = "2.0.2"
hex-literal = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12.0"

[build-dependencies]
anyhow = "1.0.69"
substreams-ethereum = "0.9.1"
thiserror = "1.0.38"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
